Fix text wrapping (#122)
* Fix text wrapping

--- a/css/studyadvice.less
+++ b/css/studyadvice.less
@@ -82,9 +82,9 @@
         width: 100%;
     }
 
-    .mastered-section:last-child {
-        margin-bottom: 0;
-    }
+        .mastered-section:last-child {
+            margin-bottom: 0;
+        }
 
     .mastered-section-title-with-image {
         & > div {
@@ -155,18 +155,18 @@
     font-size: 20px;
     color: #61b0ba;
     position: relative;
-    word-break: break-all;
+    word-break: break-word;
 }
 
-.sections:before {
-    width: 45px;
-    height: 45px;
-    background: url(img/newSprite.png) 0 -202px no-repeat;
-    position: absolute;
-    content: '';
-    left: -60px;
-    top: -10px;
-}
+    .sections:before {
+        width: 45px;
+        height: 45px;
+        background: url(img/newSprite.png) 0 -202px no-repeat;
+        position: absolute;
+        content: '';
+        left: -60px;
+        top: -10px;
+    }
 
 .mastered-section-round {
     width: 77px;
