--- a/css/text-matching.less
+++ b/css/text-matching.less
@@ -8,7 +8,7 @@
     position: relative;
     box-shadow: 0 1px 4px 0 rgba(50,50,50,.1);
     display: inline-block;
-    word-break: break-all;
+    word-break: break-word;
 
 
     &:before {
@@ -127,7 +127,7 @@
 
 .text-matching-target {
     background: none repeat scroll 0 0 @text-matching-target-background-colour;
-    border:  @text-matching-source-border-width @text-matching-source-border-style @text-matching-target-border-colour;
+    border: @text-matching-source-border-width @text-matching-source-border-style @text-matching-target-border-colour;
     border-bottom: @text-matching-source-border-bottom-width @text-matching-source-border-style @text-matching-target-border-colour;
     border-radius: 7px;
     font-size: @text-matching-target-font-size;
@@ -188,9 +188,9 @@
 }
 
 
-.text-matching-target-placeholder-wrapper .text-matching-target {
-    border-color: #9ad3d6;
-}
+    .text-matching-target-placeholder-wrapper .text-matching-target {
+        border-color: #9ad3d6;
+    }
 
 
 
